# pluralizer-cli

./: Cargo.toml  README.md  test
.github/workflows/: publish.yml
src/: main.rs
