[package]
name = "pluralizer-cli"
version = "0.1.0"
description = "Pluralize or singularize words"
authors = ["shane"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/digitalsanctum/pluralizer-cli"
repository = "https://github.com/digitalsanctum/pluralizer-cli"
keywords = ["cli", "pluralizer-cli", "tools", "shell"]
categories = ["command-line-utilities", "command-line-interface", "utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "*"
clap = { version = "3", features = ["derive", "env"] }
reqwest = { version = "*", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
