[package]
name = "pluralizer-cli"
version = "0.1.1"
description = "Pluralize words. Based on the excellent pluralizer library."
authors = ["shane"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/digitalsanctum/pluralizer-cli"
repository = "https://github.com/digitalsanctum/pluralizer-cli"
keywords = ["cli", "pluralizer-cli", "tools", "pluralizer"]
categories = ["command-line-utilities", "command-line-interface", "text-processing"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
pluralizer = "0.3.2"